[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assests/GamePlayTextures/Naves/Enemy01_Green_Frame_1_png_processed.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.4231

[node name="Enemy" type="Area2D" groups=[
"damageable",
]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.41422 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FireGun" type="Node2D" parent="."]
position = Vector2( -62.2254, -2.82843 )

[node name="FireDelayTimer" type="Timer" parent="."]
autostart = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="FireDelayTimer" to="." method="_on_FireDelayTimer_timeout"]
